[gd_scene load_steps=11 format=3 uid="uid://cg2mx5g7rsevc"]

[ext_resource type="Script" path="res://addons/maaacks_game_template/extras/scripts/pause_menu_controller.gd" id="1_ljn6m"]
[ext_resource type="PackedScene" uid="uid://c53q3lkal5pmk" path="res://scenes/overlaid_menus/pause_menu.tscn" id="2_t4jtf"]
[ext_resource type="Script" path="res://addons/maaacks_game_template/extras/scripts/level_list_loader.gd" id="3_42ucf"]
[ext_resource type="Script" path="res://scripts/station_settings.gd" id="4_5em8a"]
[ext_resource type="PackedScene" uid="uid://bkcsjsk2ciff" path="res://addons/maaacks_game_template/base/scenes/music_players/background_music_player.tscn" id="4_bbb8h"]
[ext_resource type="PackedScene" uid="uid://duxb6t4ycj6x4" path="res://scenes/loading_screen/level_loading_screen.tscn" id="5_u4na7"]
[ext_resource type="Script" path="res://scenes/game_scene/configurable_sub_viewport.gd" id="6_o8n2l"]
[ext_resource type="Script" path="res://scripts/level_list_state_manager.gd" id="8_lvsfu"]

[sub_resource type="Resource" id="Resource_76f8c"]
script = ExtResource("4_5em8a")
path = "res://scenes/game_scene/levels/hub/Station.tscn"
name = "Wittenau"
subtitle = "Wilelmsruher Damm"
doener = true

[sub_resource type="Resource" id="Resource_qcbof"]
script = ExtResource("4_5em8a")
path = "res://scenes/game_scene/levels/hub/Station.tscn"
name = "Rathaus Reinickendorf"
subtitle = ""
doener = false

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseMenuController" type="Node" parent="." node_paths=PackedStringArray("focused_viewport")]
script = ExtResource("1_ljn6m")
pause_menu_packed = ExtResource("2_t4jtf")
focused_viewport = NodePath("../ViewportContainer/ConfigurableSubViewport")

[node name="LevelLoader" type="Node" parent="." node_paths=PackedStringArray("level_container")]
script = ExtResource("3_42ucf")
level_container = NodePath("../ViewportContainer/ConfigurableSubViewport")
files = Array[ExtResource("4_5em8a")]([SubResource("Resource_76f8c"), SubResource("Resource_qcbof")])

[node name="BackgroundMusicPlayer" parent="." instance=ExtResource("4_bbb8h")]
bus = &"Master"

[node name="LevelLoadingScreen" parent="." instance=ExtResource("5_u4na7")]
visible = false

[node name="ViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="ConfigurableSubViewport" type="SubViewport" parent="ViewportContainer"]
handle_input_locally = false
canvas_item_default_texture_filter = 0
audio_listener_enable_2d = true
audio_listener_enable_3d = true
size = Vector2i(1920, 1080)
render_target_update_mode = 4
script = ExtResource("6_o8n2l")

[node name="LevelListManager" type="Node" parent="." node_paths=PackedStringArray("level_list_loader", "level_loading_screen")]
script = ExtResource("8_lvsfu")
level_list_loader = NodePath("../LevelLoader")
main_menu_scene = "res://scenes/menus/main_menu/main_menu_with_animations.tscn"
ending_scene = "res://scenes/end_credits/end_credits.tscn"
level_loading_screen = NodePath("../LevelLoadingScreen")

[connection signal="level_load_started" from="LevelLoader" to="." method="_on_level_loader_level_load_started"]
[connection signal="level_loaded" from="LevelLoader" to="." method="_on_level_loader_level_loaded"]
[connection signal="levels_finished" from="LevelLoader" to="." method="_on_level_loader_levels_finished"]
